feat: add header

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -4,9 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+  <link rel="stylesheet" href="style.css">
+  <base href="../../assets/">
   <title>Online zoo</title>
 </head>
 <body>
-  
+  <div class="main-container">
+    <div class="header">
+      <div class="first-part">
+          <span>
+          <h1 class="pet_story">PetStory online
+          <img src="images/bamboo.png" alt="bamboo">
+          </h1>
+        </span>
+        <span>About</span>
+        <span>Map</span>
+        <span>Zoos</span>
+        <span>Donate</span>
+        <span>Contact us</span>
+      </div>
+      <span>Designed by &copy;</span>
+    </div>
+    <div class="watch-favorite">
+      <button>watch online</button>
+    </div>
+  </div>
 </body>
 </html>
