feat: add favorite animal section

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -11,24 +11,32 @@
 </head>
 <body>
   <div class="main-container">
-    <div class="header">
-      <div class="first-part">
-          <span>
-          <h1 class="pet_story">PetStory online
-          <img src="images/bamboo.png" alt="bamboo">
-          </h1>
-        </span>
-        <span>About</span>
-        <span>Map</span>
-        <span>Zoos</span>
-        <span>Donate</span>
-        <span>Contact us</span>
+    <div class="panda-image">
+      <div class="header">
+        <div class="first-part">
+            <span>
+            <h1 class="pet_story">PetStory online
+            <img src="images/bamboo.png" alt="bamboo">
+            </h1>
+          </span>
+          <span>About</span>
+          <span>Map</span>
+          <span>Zoos</span>
+          <span>Donate</span>
+          <span>Contact us</span>
+        </div>
+        <span>Designed by &copy;</span>
       </div>
-      <span>Designed by &copy;</span>
+      <div class="watch-favorite">
+        <div class="circle">
+        </div>
+        <div class="text">Watch Your 
+          <span>favorite </span>animal online
+        </div>
+        <button class="btn_1">watch online</button>
+      </div>
     </div>
-    <div class="watch-favorite">
-      <button>watch online</button>
-    </div>
+    
   </div>
 </body>
 </html>
