--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="style.css">
   <base href="../../assets/">
   <title>Online zoo</title>
+  <script src="../../pages/main/script.js"></script>
 </head>
-<body>
+<body onload="addEventToImg()">
   <div class="main-container">
-    <div class="panda-image">
       <div class="header">
         <div class="first-part">
             <span>
@@ -27,16 +27,131 @@
         </div>
         <span>Designed by &copy;</span>
       </div>
-      <div class="watch-favorite">
-        <div class="circle">
-        </div>
-        <div class="text">Watch Your 
-          <span>favorite </span>animal online
-        </div>
-        <button class="btn_1">watch online</button>
-      </div>
-    </div>
-    
+      <main>
+        <section class="watch-favorite">
+          <div class="circle">
+          </div>
+          <div class="text">Watch Your 
+            <span>favorite </span>animal online
+          </div>
+          <button class="btn_1">watch online</button>
+        </section>
+        <section class="backstage">
+          <img src="images/bamboo-cap.png" alt="bamboo-cap">
+          <div class="text">
+            <h2>
+              The Backstage of the Wilderness World.
+            </h2>
+            <div>
+              The site was founded on the basis of a volunteer movement to protect and care for animals.
+            </div>
+            <h4>
+              How it works 
+            </h4>
+            <p>
+              The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.
+            </p>
+          </div>
+        </section>
+        <section class="pets">
+          <div class="content">
+            <div class="arrow">&larr;</div>
+            <div class="cards-container">
+              <div class="card">
+                <img src="images/pandas.png" alt="giant pandas">
+                <div class="content">
+                  <span class="text">
+                    <h5>giant Pandas</h5>
+                    <div>Native to Southwest China</div>
+                  </span>
+                  <img src="icons/banana-bamboo_icon.png" alt="banana bamboo">
+                </div>
+              </div><div class="card">
+                <img src="images/Eagle.png" alt="eagle">
+                <div class="content">
+                  <span class="text">
+                    <h5>Eagles</h5>
+                    <div>Native to South America</div>
+                  </span>
+                  <img src="icons/meet-fish_icon.png" alt="meet fish">
+                </div>
+              </div><div class="card">
+                <img src="images/Gorilla.png" alt="gorilla">
+                <div class="content">
+                  <span class="text">
+                    <h5>Gorillas</h5>
+                    <div>Native to Congo</div>
+                  </span>
+                  <img src="icons/banana-bamboo_icon.png" alt="banana bamboo">
+                </div>
+              </div><div class="card">
+                <img src="images/Two-toed.png" alt="two-toed">
+                <div class="content">
+                  <span class="text">
+                    <h5>Two-toed Sloth</h5>
+                    <div>Mesoamerica, South America</div>
+                  </span>
+                  <img src="icons/banana-bamboo_icon.png" alt="banana bamboo">
+                </div>
+              </div><div class="card">
+                <img src="images/Cheetahs.png" alt="cheetahs">
+                <div class="content">
+                  <span class="text">
+                    <h5>cheetahs</h5>
+                    <div>Native to Africa</div>
+                  </span>
+                  <img src="icons/meet-fish_icon.png" alt="meet fish">
+                </div>
+              </div>
+              <div class="card">
+                <img src="images\Penguins.png" alt="penguins">
+                <div class="content">
+                  <span class="text">
+                    <h5>Penguins</h5>
+                    <div>Native to Antarctica</div>
+                  </span>
+                  <img src="icons/meet-fish_icon.png" alt="meet fish">
+                </div>
+              </div>
+            </div>
+            <div class="arrow">&rarr;</div>
+          </div>
+          <button>choose your favorite</button>
+        </section>
+        <section class="pick-a-ffriend">
+          <div class="content">
+            <h2>Pick and feed a friend</h2>
+            <div class="text">
+              <h4>We know the animals bring you joy, and in these extraordinary times, we’re glad.</h4>
+              <h5>
+                During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.
+              </h5>
+              <p>
+                Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our 
+                <a href="../../pages/donate">Emergency Support Fund . </a>
+              </p>
+            </div>
+            <h3>How it works</h3>
+            <div class="icons">
+              <figure>
+                <img src="icons/pay.png" alt="pay">
+                <figcaption>Pay with card</figcaption>
+              </figure>
+              <img src="icons/Vector.png" alt="vector">
+              <figure>
+                <img src="icons/zoo.png" alt="zoo">
+                <figcaption>Payment goes to the zoo</figcaption>
+              </figure>
+              <img src="icons/Vector.png" alt="vector">
+              <figure>
+                <img src="icons/monkey.png" alt="monkey">
+                <figcaption>Your favourite animal gets delicious dish</figcaption>
+              </figure>
+            </div>
+            <button>Feed a friend now</button>
+          </div>
+        </section>
+      </main>
   </div>
 </body>
 </html>
