--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -10,13 +10,13 @@
   <title>Online zoo</title>
   <script src="../../pages/main/script.js"></script>
 </head>
-<body onload="addEventToImg()">
+<body onload="start()">
   <div class="main-container">
       <div class="header">
         <div class="first-part">
             <span>
-            <h1 class="pet_story">PetStory online
-            <img src="images/bamboo.png" alt="bamboo">
+              <h1 class="pet_story">PetStory online
+              <img src="images/bamboo.png" alt="bamboo">
             </h1>
           </span>
           <span>About</span>
@@ -148,10 +148,101 @@
                 <figcaption>Your favourite animal gets delicious dish</figcaption>
               </figure>
             </div>
-            <button>Feed a friend now</button>
+            <button id="to_donate">Feed a friend now</button>
           </div>
         </section>
+        <section class="testimonials">
+          <h3>Testimonials</h3>
+          <div class="container">
+            <div class="testimonial">
+              <div>
+                <div class="testim_header">
+                  <img src="icons/Avatar1.png" alt="avatar 1">
+                  <span>
+                    <div class="name">Michael John </div>
+                    <div class="descr">
+                      <span>Local Austria</span>
+                      &bull;;
+                      <span>Today</span>
+                    </div>
+                  </span>
+                </div>
+                <p>
+                  The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                  The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                </p>
+              </div>
+            </div>
+            <div class="testimonial">
+              <div>
+                <div class="testim_header">
+                  <img src="icons/Avatar2.png" alt="avatar 2">
+                  <span>
+                    <div class="name">Oskar Samborsky</div>
+                    <div class="descr">
+                      <span>Local Austria</span>
+                      &bull;;
+                      <span>Yesterday</span>
+                    </div>
+                  </span>
+                </div>
+                <p>
+                  Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. 
+                  The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                  The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                </p>
+              </div>
+            </div>
+            <div class="testimonial">
+              <div>
+                <div class="testim_header">
+                  <img src="icons/Avatar3.png" alt="avatar 3">
+                  <span>
+                    <div class="name">Fredericka Michelin</div>
+                    <div class="descr">
+                      <span>Local Austria</span>
+                      &bull;;
+                      <span>Yesterday</span>
+                    </div>
+                  </span>
+                </div>
+                <p>
+                  The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                  The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met.
+                  The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                </p>
+              </div>
+            </div>
+            <div class="testimonial">
+              <div>
+                <div class="testim_header">
+                  <img src="icons/Avatar4.png" alt="avatar 4">
+                  <span>
+                    <div class="name">Mila Riksha</div>
+                    <div class="descr">
+                      <span>Local Austria</span>
+                      &bull;;
+                      <span>Yesterday</span>
+                    </div>
+                  </span>
+                </div>
+                <p>
+                  My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
+                  The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                </p>
+              </div>
+            </div>
+          </div>
+          <progress max="100" value="0"></progress>
+          <button>Leave feedback</button>
+        </section>
       </main>
+      <footer>
+        <span>
+          <p class="pet_story">PetStory online
+            <img src="images/bamboo.png" alt="bamboo">
+          </p>
+      </footer>
   </div>
 </body>
 </html>
