fix: some style & func fixes

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -8,15 +8,17 @@
   <link rel="stylesheet" href="style.css">
   <base href="../../assets/">
   <title>Online zoo</title>
-  <script src="../../pages/main/script.js"></script>
+  <script src="../../../online-zoo/pages/main/script.js"></script>
 </head>
 <body onload="start()">
   <div class="main-container">
       <div class="header">
         <div class="first-part">
             <span>
-              <h1 class="pet_story">PetStory online
-              <img src="images/bamboo.png" alt="bamboo">
+              <a href="../pages/main/">
+                <h1 class="pet_story">PetStory online
+                <img src="images/bamboo.png" alt="bamboo">
+              </a>
             </h1>
           </span>
           <span>About</span>
@@ -58,7 +60,7 @@
             <div class="arrow">&larr;</div>
             <div class="cards-container">
               <div class="card">
-                <img src="images/pandas.png" alt="giant pandas">
+                <img src="images/Pandas.png" alt="pandas">
                 <div class="content">
                   <span class="text">
                     <h5>giant Pandas</h5>
@@ -128,7 +130,7 @@
               </h5>
               <p>
                 Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our 
-                <a href="../../pages/donate">Emergency Support Fund . </a>
+                <a href="../../../online-zoo/pages/donate/">Emergency Support Fund . </a>
               </p>
             </div>
             <h3>How it works</h3>
@@ -242,6 +244,22 @@
           <p class="pet_story">PetStory online
             <img src="images/bamboo.png" alt="bamboo">
           </p>
+          <form>
+            <label>
+              <input type="text">
+            </label>
+            <button type="submit">Submit</button>
+          </form>
+          <div class="media">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <nav>
+          </nav>
+          <div class="author">
+          </div>
       </footer>
   </div>
 </body>
