feat: add slider

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -239,9 +239,12 @@
                   The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
                 </p>
               </div>
+              
             </div>
           </div>
-          <progress max="100" value="0"></progress>
+          <div class="progress_wrapper">
+            <input type="range" min="0" max="7" class="slider" value="0">
+          </div>
           <button>Leave feedback</button>
         </section>
       </main>
