--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -18,7 +18,7 @@
             <img src="images/bamboo.png" alt="bamboo">
           </a>
           <nav class="first-part">
-            <span>About</span>
+            <span class="active">About</span>
             <span>Map</span>
             <span>Zoos</span>
             <span>
@@ -66,59 +66,87 @@
             <div class="arrow">&larr;</div>
             <div class="cards-container">
               <div class="card">
-                <img src="images/Pandas.png" alt="pandas">
-                <div class="content">
-                  <span class="text">
-                    <h5>giant Pandas</h5>
-                    <div>Native to Southwest China</div>
-                  </span>
-                  <img src="icons/banana-bamboo_icon.png" alt="banana bamboo">
+                <div class="image-container">
+                  <img src="images/Pandas.png" alt="pandas">
                 </div>
-              </div><div class="card">
-                <img src="images/Eagle.png" alt="eagle">
-                <div class="content">
-                  <span class="text">
-                    <h5>Eagles</h5>
-                    <div>Native to South America</div>
-                  </span>
-                  <img src="icons/meet-fish_icon.png" alt="meet fish">
-                </div>
-              </div><div class="card">
-                <img src="images/Gorilla.png" alt="gorilla">
-                <div class="content">
-                  <span class="text">
-                    <h5>Gorillas</h5>
-                    <div>Native to Congo</div>
-                  </span>
-                  <img src="icons/banana-bamboo_icon.png" alt="banana bamboo">
-                </div>
-              </div><div class="card">
-                <img src="images/Two-toed.png" alt="two-toed">
-                <div class="content">
-                  <span class="text">
-                    <h5>Two-toed Sloth</h5>
-                    <div>Mesoamerica, South America</div>
-                  </span>
-                  <img src="icons/banana-bamboo_icon.png" alt="banana bamboo">
-                </div>
-              </div><div class="card">
-                <img src="images/Cheetahs.png" alt="cheetahs">
-                <div class="content">
-                  <span class="text">
-                    <h5>cheetahs</h5>
-                    <div>Native to Africa</div>
-                  </span>
-                  <img src="icons/meet-fish_icon.png" alt="meet fish">
+                <div class="wrapper">
+                  <div class="content">
+                    <span class="text">
+                      <h5>giant Pandas</h5>
+                      <div>Native to Southwest China</div>
+                    </span>
+                    <img src="icons/banana-bamboo_icon.png" alt="banana bamboo">
+                  </div>
                 </div>
               </div>
               <div class="card">
-                <img src="images\Penguins.png" alt="penguins">
-                <div class="content">
-                  <span class="text">
-                    <h5>Penguins</h5>
-                    <div>Native to Antarctica</div>
-                  </span>
-                  <img src="icons/meet-fish_icon.png" alt="meet fish">
+                <div class="image-container">
+                  <img src="images/Eagle.png" alt="eagle">
+                </div>
+                <div class="wrapper">
+                  <div class="content">
+                    <span class="text">
+                      <h5>Eagles</h5>
+                      <div>Native to South America</div>
+                    </span>
+                    <img src="icons/meet-fish_icon.png" alt="meet fish">
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="image-container">
+                  <img src="images/Gorilla.png" alt="gorilla">
+                </div>
+                <div class="wrapper">
+                  <div class="content">
+                    <span class="text">
+                      <h5>Gorillas</h5>
+                      <div>Native to Congo</div>
+                    </span>
+                    <img src="icons/banana-bamboo_icon.png" alt="banana bamboo">
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="image-container">
+                  <img src="images/Two-toed.png" alt="two-toed">
+                </div>
+                <div class="wrapper">
+                  <div class="content">
+                    <span class="text">
+                      <h5>Two-toed Sloth</h5>
+                      <div>Mesoamerica, South America</div>
+                    </span>
+                    <img src="icons/banana-bamboo_icon.png" alt="banana bamboo">
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="image-container">
+                  <img src="images/Cheetahs.png" alt="cheetahs">
+                </div>
+                <div class="wrapper">
+                  <div class="content">
+                    <span class="text">
+                      <h5>cheetahs</h5>
+                      <div>Native to Africa</div>
+                    </span>
+                    <img src="icons/meet-fish_icon.png" alt="meet fish">
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="image-container">
+                  <img src="images\Penguins.png" alt="penguins">
+                </div>
+                <div class="wrapper">
+                  <div class="content">
+                    <span class="text">
+                      <h5>Penguins</h5>
+                      <div>Native to Antarctica</div>
+                    </span>
+                    <img src="icons/meet-fish_icon.png" alt="meet fish">
+                  </div>
                 </div>
               </div>
             </div>
@@ -239,7 +267,6 @@
                   The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
                 </p>
               </div>
-              
             </div>
           </div>
           <div class="progress_wrapper">
