fix: some generic fixes

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -18,7 +18,7 @@
             <img src="images/bamboo.png" alt="bamboo">
           </a>
           <nav class="first-part">
-            <span>About</span>
+            <span class="active">About</span>
             <span>Map</span>
             <span>Zoos</span>
             <span>
@@ -239,7 +239,6 @@
                   The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
                 </p>
               </div>
-              
             </div>
           </div>
           <div class="progress_wrapper">
