feat: initial create donate page

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -283,7 +283,7 @@
               <img src="images/bamboo.png" alt="bamboo">
             </a>
           </div>
-          <form>
+          <form action="">
             <label for="email">
               Subscribe to our news
             </label>
