--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -18,7 +18,11 @@
             <img src="images/bamboo.png" alt="bamboo">
           </a>
           <nav class="first-part">
-            <span class="active">About</span>
+            <span class="active">
+              <a href="../../../online-zoo/pages/main/">
+                About
+              </a>
+            </span>
             <span>Map</span>
             <span>Zoos</span>
             <span>
@@ -328,7 +332,9 @@
           <nav>
             <ul>
               <li>
+                <a href="../pages/main/">
                   About
+                </a>
               </li>
               <li>
                   Map
