--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -10,9 +10,10 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="small.css" />
+    <link rel="stylesheet" href="tablet.css" />
     <base href="../../assets/" />
     <title>Online zoo</title>
-    <script src="../../../online-zoo/pages/main/script.js"></script>
+    <script src="../pages/main/script.js"></script>
   </head>
   <body onload="start()">
     <header class="header">
@@ -32,7 +33,7 @@
           </span>
           <span>Contact us</span>
         </nav>
-        <span>
+        <span class="design">
           <a
             href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online"
             target="_blank"
@@ -40,6 +41,9 @@
             Designed by &copy;
           </a>
         </span>
+        <div class="menu">
+          <div></div>
+        </div>
       </div>
     </header>
     <main>
