feat: view 1000px1 donate page

--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="small.css" />
     <base href="../../assets/" />
     <script src="../pages/donate/script.js"></script>
     <title>Online zoo</title>
