feat: add responsive 640px

--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="small.css" />
+    <link rel="stylesheet" href="tablet.css" />
     <base href="../../assets/" />
     <script src="../pages/donate/script.js"></script>
     <title>Online zoo</title>
@@ -32,7 +33,7 @@
           </span>
           <span>Contact us</span>
         </nav>
-        <span>
+        <span class="design">
           <a
             href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online"
             target="_blank"
@@ -40,6 +41,9 @@
             Designed by &copy;
           </a>
         </span>
+        <div class="menu">
+          <div></div>
+        </div>
       </div>
     </header>
     <main>
