--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="small.css" />
     <link rel="stylesheet" href="tablet.css" />
+    <link rel="stylesheet" href="mobile.css" />
     <base href="../../assets/" />
     <script src="../pages/donate/script.js"></script>
     <title>Online zoo</title>
@@ -41,9 +42,8 @@
             Designed by &copy;
           </a>
         </span>
-        <div class="menu">
-          <div></div>
-        </div>
+        <div class="menu"></div>
+        <div class="menu-container"></div>
       </div>
     </header>
     <main>
