fix: script src

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="mobile.css" />
     <base href="../../assets/" />
     <title>Online zoo</title>
-    <script src="../pages/main/script.js"></script>
+    <script src="../../../online-zoo/pages/main/script.js"></script>
   </head>
   <body onload="start()">
     <header class="header">
