--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -41,9 +41,8 @@
             Designed by &copy;
           </a>
         </span>
-        <div class="menu">
-          <div></div>
-        </div>
+        <div class="menu"></div>
+        <div class="menu-container"></div>
       </div>
     </header>
     <main>
