--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -14,9 +14,8 @@
     <link rel="stylesheet" href="mobile.css" />
     <base href="../../assets/" />
     <title>Online zoo</title>
-    <script src="../pages/main/script.js"></script>
   </head>
-  <body onload="start()">
+  <body>
     <header class="header">
       <div class="wrapper_header">
         <a href="../pages/main/" class="pet_story">
@@ -205,124 +204,8 @@
       </section>
       <section class="testimonials">
         <h3>Testimonials</h3>
-        <div class="container">
-          <div class="testimonial">
-            <div>
-              <div class="testim_header">
-                <img src="icons/Avatar1.png" alt="avatar 1" />
-                <span>
-                  <div class="name">Michael John</div>
-                  <div class="descr">
-                    <span>Local Austria</span>
-                    &bull;;
-                    <span>Today</span>
-                  </div>
-                </span>
-              </div>
-              <p>
-                The best online zoo I’ve met. My son delighted very much ljves
-                to watch gouillas. Online zoo is one jf the ways to instill a
-                love for animals.The best online zoo I’ve met. My son delighted
-                very much ljves to watch gouillas. Online zoo is one jf the ways
-                to instill a love for animals. The best online zoo I’ve met. My
-                son delighted very much ljves to watch gouillas. Online zoo is
-                one jf the ways to instill a love for animals.The best online
-                zoo I’ve met. My son delighted very much ljves to watch
-                gouillas. Online zoo is one jf the ways to instill a love for
-                animals.
-              </p>
-            </div>
-          </div>
-          <div class="testimonial">
-            <div>
-              <div class="testim_header">
-                <img src="icons/Avatar2.png" alt="avatar 2" />
-                <span>
-                  <div class="name">Oskar Samborsky</div>
-                  <div class="descr">
-                    <span>Local Austria</span>
-                    &bull;;
-                    <span>Yesterday</span>
-                  </div>
-                </span>
-              </div>
-              <p>
-                Online zoo is one jf the ways to instill a love for animals.The
-                best online zoo I’ve met. My son delighted very much ljves to
-                watch gouillas. Online zoo is one jf the ways to instill a love
-                for animals.The best online zoo I’ve met. My son delighted very
-                much ljves to watch gouillas. The best online zoo I’ve met. My
-                son delighted very much ljves to watch gouillas. Online zoo is
-                one jf the ways to instill a love for animals.The best online
-                zoo I’ve met. My son delighted very much ljves to watch
-                gouillas. Online zoo is one jf the ways to instill a love for
-                animals. The best online zoo I’ve met. My son delighted very
-                much ljves to watch gouillas. Online zoo is one jf the ways to
-                instill a love for animals.The best online zoo I’ve met. My son
-                delighted very much ljves to watch gouillas. Online zoo is one
-                jf the ways to instill a love for animals.
-              </p>
-            </div>
-          </div>
-          <div class="testimonial">
-            <div>
-              <div class="testim_header">
-                <img src="icons/Avatar3.png" alt="avatar 3" />
-                <span>
-                  <div class="name">Fredericka Michelin</div>
-                  <div class="descr">
-                    <span>Local Austria</span>
-                    &bull;;
-                    <span>Yesterday</span>
-                  </div>
-                </span>
-              </div>
-              <p>
-                The best online zoo I’ve met. My son delighted very much ljves
-                to watch gouillas. Online zoo is one jf the ways to instill a
-                love for animals.The best online zoo I’ve met. My son delighted
-                very much ljves to watch gouillas. Online zoo is one jf the ways
-                to instill a love for animals. The best online zoo I’ve met. My
-                son delighted very much ljves to watch gouillas. Online zoo is
-                one jf the ways to instill a love for animals.The best online
-                zoo I’ve met. The best online zoo I’ve met. My son delighted
-                very much ljves to watch gouillas. Online zoo is one jf the ways
-                to instill a love for animals.The best online zoo I’ve met. My
-                son delighted very much ljves to watch gouillas. Online zoo is
-                one jf the ways to instill a love for animals.
-              </p>
-            </div>
-          </div>
-          <div class="testimonial">
-            <div>
-              <div class="testim_header">
-                <img src="icons/Avatar4.png" alt="avatar 4" />
-                <span>
-                  <div class="name">Mila Riksha</div>
-                  <div class="descr">
-                    <span>Local Austria</span>
-                    &bull;;
-                    <span>Yesterday</span>
-                  </div>
-                </span>
-              </div>
-              <p>
-                My son delighted very much ljves to watch gouillas. Online zoo
-                is one jf the ways to instill a love for animals.The best online
-                zoo I’ve met. My son delighted very much ljves to watch
-                gouillas. Online zoo is one jf the ways to instill a love for
-                animals.The best online zoo I’ve met. My son delighted very much
-                ljves to watch gouillas. Online zoo is one jf the ways to
-                instill a love for animals.The best online zoo I’ve met. My son
-                delighted very much ljves to watch gouillas. The best online zoo
-                I’ve met. My son delighted very much ljves to watch gouillas.
-                Online zoo is one jf the ways to instill a love for animals.The
-                best online zoo I’ve met. My son delighted very much ljves to
-                watch gouillas. Online zoo is one jf the ways to instill a love
-                for animals.
-              </p>
-            </div>
-          </div>
+        <div class="wrapper-container">
+          <div class="container"></div>
         </div>
         <div class="progress_wrapper">
           <input type="range" min="0" max="7" class="slider" value="0" />
@@ -419,5 +302,6 @@
         </div>
       </div>
     </footer>
+    <script type="module" src="../pages/main/script.js"></script>
   </body>
 </html>
