feat: add pet & testimonials carousels

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -71,91 +71,8 @@
       <section class="pets">
         <div class="content">
           <div class="arrow">&larr;</div>
-          <div class="cards-container">
-            <div class="card">
-              <div class="image-container">
-                <img src="images/Pandas.png" alt="pandas" />
-              </div>
-              <div class="wrapper">
-                <div class="content">
-                  <span class="text">
-                    <h5>giant Pandas</h5>
-                    <div>Native to Southwest China</div>
-                  </span>
-                  <img src="icons/banana-bamboo_icon.png" alt="banana bamboo" />
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="image-container">
-                <img src="images/Eagle.png" alt="eagle" />
-              </div>
-              <div class="wrapper">
-                <div class="content">
-                  <span class="text">
-                    <h5>Eagles</h5>
-                    <div>Native to South America</div>
-                  </span>
-                  <img src="icons/meet-fish_icon.png" alt="meet fish" />
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="image-container">
-                <img src="images/Gorilla.png" alt="gorilla" />
-              </div>
-              <div class="wrapper">
-                <div class="content">
-                  <span class="text">
-                    <h5>Gorillas</h5>
-                    <div>Native to Congo</div>
-                  </span>
-                  <img src="icons/banana-bamboo_icon.png" alt="banana bamboo" />
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="image-container">
-                <img src="images/Two-toed.png" alt="two-toed" />
-              </div>
-              <div class="wrapper">
-                <div class="content">
-                  <span class="text">
-                    <h5>Two-toed Sloth</h5>
-                    <div>Mesoamerica, South America</div>
-                  </span>
-                  <img src="icons/banana-bamboo_icon.png" alt="banana bamboo" />
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="image-container">
-                <img src="images/Cheetahs.png" alt="cheetahs" />
-              </div>
-              <div class="wrapper">
-                <div class="content">
-                  <span class="text">
-                    <h5>cheetahs</h5>
-                    <div>Native to Africa</div>
-                  </span>
-                  <img src="icons/meet-fish_icon.png" alt="meet fish" />
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="image-container">
-                <img src="images\Penguins.png" alt="penguins" />
-              </div>
-              <div class="wrapper">
-                <div class="content">
-                  <span class="text">
-                    <h5>Penguins</h5>
-                    <div>Native to Antarctica</div>
-                  </span>
-                  <img src="icons/meet-fish_icon.png" alt="meet fish" />
-                </div>
-              </div>
-            </div>
+          <div class="cards-wrapper">
+            <div class="cards-container"></div>
           </div>
           <div class="arrow">&rarr;</div>
         </div>
