--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -130,6 +130,7 @@
                 <input
                   type="number"
                   oninput="handleAmountChange(this);"
+                  onkeydown="forbidden(event)"
                   id="another-amount"
                   placeholder="Another amount"
                 />
